<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <EditText
            android:layout_width="273dp"
            android:layout_height="44dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_code" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="68dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.263" android:hint="@string/txt_code"
    />
    <EditText
            android:layout_width="275dp"
            android:layout_height="40dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/txt_price" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.263"
            android:hint="@string/txt_price"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/txt_name"/>
    <Button
            android:text="@string/add_article"
            android:layout_width="181dp"
            android:layout_height="45dp"
            android:id="@+id/add_article"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.224"
            android:onClick="addArticle"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_price"/>
    <Button
            android:text="@string/find_article"
            android:layout_width="183dp"
            android:layout_height="49dp"
            android:id="@+id/button2" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.226"
            android:onClick="findArticle" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/add_article"/>
    <Button
            android:text="@string/edit_article"
            android:layout_width="178dp"
            android:layout_height="51dp"
            android:id="@+id/edit_article" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/button2"
            app:layout_constraintHorizontal_bias="0.221"
            android:onClick="editArticle"/>
    <Button
            android:text="@string/delete_article"
            android:layout_width="181dp"
            android:layout_height="48dp"
            android:id="@+id/button4" android:layout_marginBottom="72dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.21"
            android:onClick="deleteArticle"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/edit_article"
            app:layout_constraintVertical_bias="0.116"/>
    <EditText
            android:layout_width="275dp"
            android:layout_height="45dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_name"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_code" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.266"
            android:hint="@string/txt_name"/>
</androidx.constraintlayout.widget.ConstraintLayout>